<resources>
    <string name="app_name">My WGU Scheduler</string>
    <string name="term1">Term1</string>
    <string name="term_title">Term Title</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_02_01_2021">02/01/2021</string>
    <string name="_01_01_2021">01/01/2021</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="error_string">Field must not be empty.</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="label">Select Assessment Type</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="objective">Objective</string>
    <string name="enable_notifications">Enable Notifications</string>
</resources>