<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddAssessmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="title" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        CREATE A SELECTION FOR ASSESSMENT TYPE -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/assessment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"
                android:text="@string/objective"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        CREATE A DATE PICKER FOR ASSESSMENT DATE -->
<!--        android:clickable="true"-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_due_date"
            android:inputType="none"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            app:endIconMode="custom"
            android:paddingTop="16dp"
            app:endIconDrawable="@drawable/select_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel_assessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_save_assessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/button_save"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>