<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Course.AddCourseActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="title" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notes_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/title_text_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="notes" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        SELECT A STATUS  -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_status_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/notes_text_input">

            <AutoCompleteTextView
                android:id="@+id/course_status_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select a status"
                android:inputType="none"
                android:text="@string/status" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--       SELECT INSTRUCTOR -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/select_instructor_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/course_status_input">

            <AutoCompleteTextView
                android:id="@+id/course_instructor_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select Instructor"
                android:inputType="none"
                android:text="instructor name" />

        </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_date_picker_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:enabled="false"
                android:inputType="none"
                app:layout_constraintTop_toBottomOf="@+id/select_instructor_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_date_picker_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:enabled="false"
                android:inputType="none"
                app:layout_constraintTop_toBottomOf="@+id/select_instructor_input"
                app:layout_constraintStart_toEndOf="@id/start_date_picker_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/date_range_picker_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                app:icon="@drawable/calendar"
                app:iconGravity="textTop"
                app:layout_constraintTop_toBottomOf="@+id/select_instructor_input"
                app:layout_constraintStart_toEndOf="@+id/end_date_picker_text_input"/>


        <Button
            android:id="@+id/menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Assessments"
            app:layout_constraintTop_toBottomOf="@id/date_range_picker_button"
            app:layout_constraintBottom_toTopOf="@+id/rv_assessments_by_course"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_assessments_by_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_cancel_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_button"
        tools:listitem="@layout/course_assessment_list_item" />

    <Button
        android:id="@+id/button_cancel_course"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_margin="4dp"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="15dp"
        android:paddingBottom="15dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/button_save_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_course"/>

    <Button
        android:id="@+id/button_save_course"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_margin="4dp"
        android:layout_marginStart="287dp"
        android:layout_marginBottom="15dp"
        android:paddingBottom="15dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel_course" />


</androidx.constraintlayout.widget.ConstraintLayout>