<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddCourseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notes_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="notes" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        SELECT A STATUS  -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_status_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/course_status_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select a status"
                android:text="@string/status"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--       SELECT INSTRUCTOR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="textEnd"
            android:gravity="end">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_instructor_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="none"
                android:paddingEnd="5dp"
                android:textAlignment="center">

                <AutoCompleteTextView
                    android:id="@+id/course_instructor_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Select a instructor"
                    android:text="Instructor name"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <Button-->
<!--                android:id="@+id/select_instructor_button"-->
<!--                style="?attr/materialButtonOutlinedStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="14dp"-->
<!--                android:gravity="end"-->
<!--                app:icon="@drawable/person"-->
<!--                app:iconGravity="textTop" />-->

        </LinearLayout>

        <!--       SELECT TERM  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="textEnd"
            android:gravity="end">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/select_term_input"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <AutoCompleteTextView
                    android:id="@+id/course_term_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Select a instructor"
                    android:text="Instructor name"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <Button-->
<!--                android:id="@+id/select_term_button"-->
<!--                style="?attr/materialButtonOutlinedStyle"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="14dp"-->
<!--                app:icon="@drawable/term"-->
<!--                android:gravity="end"-->
<!--                app:iconGravity="textTop" />-->

        </LinearLayout>

        <!--        CREATE A DATE PICKER FOR COURSE DATE -->
        <!--        android:clickable="true"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="textEnd"
            android:gravity="end">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_date_picker_text_input"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="mm/dd/yyyy"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/icon_start_date_picker_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:icon="@drawable/calendar"
                android:gravity="end"
                app:iconGravity="textTop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="textEnd"
            android:gravity="end">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_date_picker_text_input"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="mm/dd/yyyy"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/icon_end_date_picker_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:icon="@drawable/calendar"
                android:gravity="end"
                app:iconGravity="textTop" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="end">

            <Button
                android:id="@+id/button_cancel_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_save_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/button_save"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>